[gd_scene load_steps=2 format=3 uid="uid://ws2ua84a6nnc"]

[ext_resource type="Script" path="res://Database/NumberFilterOption.gd" id="2_txxrd"]

[node name="NumberFilterOption" type="VBoxContainer"]
offset_left = 2.0
offset_top = 2.0
offset_right = 179.0
offset_bottom = 36.0
script = ExtResource("2_txxrd")
list_filtering = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MenuButton" type="OptionButton" parent="HBoxContainer"]
visible = false
layout_mode = 2
selected = 0
item_count = 26
popup/item_0/text = "None"
popup/item_1/text = "Acid"
popup/item_1/id = 1
popup/item_2/text = "All"
popup/item_2/id = 2
popup/item_3/text = "Bleed"
popup/item_3/id = 3
popup/item_4/text = "Bludgeoning"
popup/item_4/id = 4
popup/item_5/text = "Chaotic"
popup/item_5/id = 5
popup/item_6/text = "Cold"
popup/item_6/id = 6
popup/item_7/text = "Cold Iron"
popup/item_7/id = 7
popup/item_8/text = "Electricity"
popup/item_8/id = 8
popup/item_9/text = "Evil"
popup/item_9/id = 9
popup/item_10/text = "Fire"
popup/item_10/id = 10
popup/item_11/text = "Force"
popup/item_11/id = 11
popup/item_12/text = "Good"
popup/item_12/id = 12
popup/item_13/text = "Lawful"
popup/item_13/id = 13
popup/item_14/text = "Mental"
popup/item_14/id = 14
popup/item_15/text = "Negative"
popup/item_15/id = 15
popup/item_16/text = "Orichalum"
popup/item_16/id = 16
popup/item_17/text = "Physical"
popup/item_17/id = 17
popup/item_18/text = "Piercing"
popup/item_18/id = 18
popup/item_19/text = "Poison"
popup/item_19/id = 19
popup/item_20/text = "Positive"
popup/item_20/id = 20
popup/item_21/text = "Precision"
popup/item_21/id = 21
popup/item_22/text = "Silver"
popup/item_22/id = 22
popup/item_23/text = "Slashing"
popup/item_23/id = 23
popup/item_24/text = "Sonic"
popup/item_24/id = 24
popup/item_25/text = "Splash"
popup/item_25/id = 25

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Filter"

[node name="SpinboxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="SpinboxContainer"]
layout_mode = 2
min_value = -100.0
max_value = 1000.0
rounded = true

[node name="Label" type="Label" parent="SpinboxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "to"

[node name="SpinBox2" type="SpinBox" parent="SpinboxContainer"]
layout_mode = 2
min_value = -100.0
max_value = 1000.0
rounded = true
